--- a/tenzies/src/components/gameSquare/gamesquare.css
+++ b/tenzies/src/components/gameSquare/gamesquare.css
@@ -1,3 +1,14 @@
+.header-text{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 300px;
+	text-align: center;
+	margin-bottom: 3rem;
+}
+.header-title{
+	margin-bottom: 1rem;
+}
 .gamesquare {
 	width: 48rem;
 	height: 36rem;
